frontend/tests/spec/snapshots/lexer/bold/escaped-bold.snap
---
source: frontend/tests/lexer/mod.rs
info: "Test 'escaped-bold' from 'markup/bold.yml'"
---
\*\*not bold\*\*

\*
^^ - Plain @ (0 -> 2)
  \*
  ^^ - Plain @ (2 -> 4)
    not
    ^^^ - Plain @ (4 -> 7)
        
       ^ - Whitespace @ (7 -> 8)
        bold
        ^^^^ - Plain @ (8 -> 12)
            \*
            ^^ - Plain @ (12 -> 14)
              \*
              ^^ - Plain @ (14 -> 16)
                ␊
                ^ - Newline @ (16 -> 17)

---
With input:

\*\*not bold\*\*
