frontend/tests/spec/snapshots/lexer/bold/not-bold.snap
---
source: frontend/tests/lexer/mod.rs
info: "Test 'not-bold' from 'markup/bold.yml'"
---
** not bold **

**
^^ - Star(2) @ (0 -> 2)
   
  ^ - Whitespace @ (2 -> 3)
   not
   ^^^ - Plain @ (3 -> 6)
       
      ^ - Whitespace @ (6 -> 7)
       bold
       ^^^^ - Plain @ (7 -> 11)
            
           ^ - Whitespace @ (11 -> 12)
            **
            ^^ - Star(2) @ (12 -> 14)
              ␊
              ^ - Newline @ (14 -> 15)

---
With input:

** not bold **
