frontend/tests/spec/snapshots/lexer/bold/simple-bold.snap
---
source: frontend/tests/lexer/mod.rs
info: "Test 'simple-bold' from 'markup/bold.yml'"
---
**Bold**

**
^^ - Star(2) @ (0 -> 2)
  Bold
  ^^^^ - Plain @ (2 -> 6)
      **
      ^^ - Star(2) @ (6 -> 8)
        ␊
        ^ - Newline @ (8 -> 9)

---
With input:

**Bold**
